tests/golden/errors/keyed_not_alphabetical.kso
type user
  admin: bool
  name: string

fn main
  { name admin } = user false "clay"
  print "{name} {admin}"
